--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -34,7 +34,8 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Cigarros por dia</mat-label>
-                                <input matInput #qtos="ngModel" name="qtos" (focus)="$event.target.select()" [ngModel]="rdcData.qtos">
+                                <input matInput type="number" #qtos="ngModel" name="qtos" (focus)="$event.target.select()"
+                                        [(ngModel)]="rdcData.qtos" (input)="calcRisco(f.value)">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -203,5 +204,6 @@
             </div>
         </form>
     </div>
+    <br/>
 
 </div>
