revison rdc rddc

--- a/src/app/avaliation/av-dash/av-dash.component.scss
+++ b/src/app/avaliation/av-dash/av-dash.component.scss
@@ -34,6 +34,10 @@
   width: 100%;
 }
 ::ng-deep {
+    // Para o painel não ficar em branco depois de clicado
+    .mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover {
+        background: rgba(100,100,100,0.7);
+    }
   .mat-expansion-panel {
     background-color: rgba(119, 107, 107, 0.788);
     margin-bottom: 3px !important;
