--- a/src/app/commun/edit-del-form/confirmDeleteDialog.html
+++ b/src/app/commun/edit-del-form/confirmDeleteDialog.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Atenção <mat-icon color="warn">warning</mat-icon></h1>
 <div mat-dialog-content>
   <p>Vai eliminar esta avaliação:
-  <br/>{{data.dataAv}}
+  <br/>{{data.dataAv | date:'dd/LL/yyyy'}}
   </p>
   <p>Confirme ou cancele.</p>
 </div>
